lite-image-fallback

--- a/become-a-host/property-type-group.html
+++ b/become-a-host/property-type-group.html
@@ -1057,7 +1057,7 @@
                    data-original-uri="https://a0.muscache.com/im/pictures/beb16c28-11d4-4033-be7e-19d6baada826.jpg"
                    style="object-fit: cover; object-position: center center;"
                   />
-                  <div class="_10xjrv2u" style="background-image: url('https://a0.muscache.com/im/pictures/beb16c28-11d4-4033-be7e-19d6baada826.jpg'); background-size: cover;"></div>
+                  <div class="lite-image-fallback" style="background-image: url('https://a0.muscache.com/im/pictures/beb16c28-11d4-4033-be7e-19d6baada826.jpg'); background-size: cover;"></div>
                  </div>
                 </div>
                 <span class="_1cfbqt9" role="text"><span class="_x4r3u7">How to define what kind of space you’re hosting</span><span class="_wfgfvf">1 min read</span></span>
