--- a/listings-product/places.html
+++ b/listings-product/places.html
@@ -445,7 +445,7 @@
                                                   style="object-fit: cover"
                                                 />
                                                 <div
-                                                  class="_10xjrv2u"
+                                                  class="lite-image-fallback"
                                                   style="
                                                     background-image: url('https://a0.muscache.com/im/pictures/e557bf4b-cde7-4107-a696-2c22ab889b69.jpg?aki_policy=large');
                                                     background-size: cover;
@@ -477,7 +477,7 @@
                                                   style="object-fit: cover"
                                                 />
                                                 <div
-                                                  class="_10xjrv2u"
+                                                  class="lite-image-fallback"
                                                   style="
                                                     background-image: url('https://a0.muscache.com/im/pictures/34527a29-4963-4a2a-9a15-c694574accbb.jpg?aki_policy=large');
                                                     background-size: cover;
@@ -509,7 +509,7 @@
                                                   style="object-fit: cover"
                                                 />
                                                 <div
-                                                  class="_10xjrv2u"
+                                                  class="lite-image-fallback"
                                                   style="
                                                     background-image: url('https://a0.muscache.com/im/pictures/c5af983b-869e-4b0f-bfc4-e0f1e045e154.jpg?aki_policy=large');
                                                     background-size: cover;
@@ -541,7 +541,7 @@
                                                   style="object-fit: cover"
                                                 />
                                                 <div
-                                                  class="_10xjrv2u"
+                                                  class="lite-image-fallback"
                                                   style="
                                                     background-image: url('https://a0.muscache.com/im/pictures/d12c4075-afcf-487e-be87-9ab79c2029bf.jpg?aki_policy=large');
                                                     background-size: cover;
