--- a/submission/photo-upload.html
+++ b/submission/photo-upload.html
@@ -1063,7 +1063,7 @@
                                       srcset="https://a0.muscache.com/pictures/d3c4c925-ada4-42c6-8dea-6cd91ccba611.jpg, https://a0.muscache.com/pictures/258a39d7-5728-4ee5-8bda-52c6d39aec19.jpg 2x"
                                       style="object-fit: cover;"
                                      />
-                                     <div class="_10xjrv2u" style="background-image: url('https://a0.muscache.com/pictures/258a39d7-5728-4ee5-8bda-52c6d39aec19.jpg'); background-size: cover;"></div>
+                                     <div class="lite-image-fallback" style="background-image: url('https://a0.muscache.com/pictures/258a39d7-5728-4ee5-8bda-52c6d39aec19.jpg'); background-size: cover;"></div>
                                     </div>
                                    </div>
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage  with a variety of details and angles" style="--dls-liteimage-padding-top: 133.333%;">
@@ -1078,7 +1078,7 @@
                                       srcset="https://a0.muscache.com/pictures/1f6488cf-91b3-4373-9fc1-51034e5b280f.jpg, https://a0.muscache.com/pictures/1741cb4d-5e30-47e3-bb57-9afd60383323.jpg 2x"
                                       style="object-fit: cover;"
                                      />
-                                     <div class="_10xjrv2u" style="background-image: url('https://a0.muscache.com/pictures/1741cb4d-5e30-47e3-bb57-9afd60383323.jpg'); background-size: cover;"></div>
+                                     <div class="lite-image-fallback" style="background-image: url('https://a0.muscache.com/pictures/1741cb4d-5e30-47e3-bb57-9afd60383323.jpg'); background-size: cover;"></div>
                                     </div>
                                    </div>
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage  with a variety of details and angles" style="--dls-liteimage-padding-top: 133.333%;">
@@ -1093,7 +1093,7 @@
                                       srcset="https://a0.muscache.com/pictures/c489fb6f-ead8-438b-b80b-0f1ef27d423e.jpg, https://a0.muscache.com/pictures/eefcd6c3-bc66-45c5-9494-9ef414bf2863.jpg 2x"
                                       style="object-fit: cover;"
                                      />
-                                     <div class="_10xjrv2u" style="background-image: url('https://a0.muscache.com/pictures/eefcd6c3-bc66-45c5-9494-9ef414bf2863.jpg'); background-size: cover;"></div>
+                                     <div class="lite-image-fallback" style="background-image: url('https://a0.muscache.com/pictures/eefcd6c3-bc66-45c5-9494-9ef414bf2863.jpg'); background-size: cover;"></div>
                                     </div>
                                    </div>
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage  with a variety of details and angles" style="--dls-liteimage-padding-top: 133.333%;">
@@ -1108,7 +1108,7 @@
                                       srcset="https://a0.muscache.com/pictures/1ccdab84-6945-4581-8f5f-89127a384196.jpg, https://a0.muscache.com/pictures/135430f8-8ea1-4f4a-a527-7643e316c77a.jpg 2x"
                                       style="object-fit: cover;"
                                      />
-                                     <div class="_10xjrv2u" style="background-image: url('https://a0.muscache.com/pictures/135430f8-8ea1-4f4a-a527-7643e316c77a.jpg'); background-size: cover;"></div>
+                                     <div class="lite-image-fallback" style="background-image: url('https://a0.muscache.com/pictures/135430f8-8ea1-4f4a-a527-7643e316c77a.jpg'); background-size: cover;"></div>
                                     </div>
                                    </div>
                                   </div>
@@ -1135,7 +1135,7 @@
                                       srcset="https://a0.muscache.com/pictures/d6f9083f-b558-48af-8b7e-9e95a72030f5.jpg, https://a0.muscache.com/pictures/961fd95e-ca8a-4661-9416-60299fc4d186.jpg 2x"
                                       style="object-fit: cover;"
                                      />
-                                     <div class="_10xjrv2u" style="background-image: url('https://a0.muscache.com/pictures/961fd95e-ca8a-4661-9416-60299fc4d186.jpg'); background-size: cover;"></div>
+                                     <div class="lite-image-fallback" style="background-image: url('https://a0.muscache.com/pictures/961fd95e-ca8a-4661-9416-60299fc4d186.jpg'); background-size: cover;"></div>
                                     </div>
                                    </div>
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage with  the same subjects and angles" style="--dls-liteimage-padding-top: 133.333%;">
@@ -1150,7 +1150,7 @@
                                       srcset="https://a0.muscache.com/pictures/55191c81-f7dc-40d9-b77e-012222258d45.jpg, https://a0.muscache.com/pictures/974f69d8-9e8d-4eb3-bfef-123afb66f202.jpg 2x"
                                       style="object-fit: cover;"
                                      />
-                                     <div class="_10xjrv2u" style="background-image: url('https://a0.muscache.com/pictures/974f69d8-9e8d-4eb3-bfef-123afb66f202.jpg'); background-size: cover;"></div>
+                                     <div class="lite-image-fallback" style="background-image: url('https://a0.muscache.com/pictures/974f69d8-9e8d-4eb3-bfef-123afb66f202.jpg'); background-size: cover;"></div>
                                     </div>
                                    </div>
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage with  the same subjects and angles" style="--dls-liteimage-padding-top: 133.333%;">
@@ -1165,7 +1165,7 @@
                                       srcset="https://a0.muscache.com/pictures/9c4c2f39-2f30-4ec3-85fc-fa1a589c53b9.jpg, https://a0.muscache.com/pictures/e4c6009f-9344-4234-a952-253e54fed598.jpg 2x"
                                       style="object-fit: cover;"
                                      />
-                                     <div class="_10xjrv2u" style="background-image: url('https://a0.muscache.com/pictures/e4c6009f-9344-4234-a952-253e54fed598.jpg'); background-size: cover;"></div>
+                                     <div class="lite-image-fallback" style="background-image: url('https://a0.muscache.com/pictures/e4c6009f-9344-4234-a952-253e54fed598.jpg'); background-size: cover;"></div>
                                     </div>
                                    </div>
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage with  the same subjects and angles" style="--dls-liteimage-padding-top: 133.333%;">
@@ -1180,7 +1180,7 @@
                                       srcset="https://a0.muscache.com/pictures/6a85ab0f-f1c6-4333-942a-c7156d5c3803.jpg, https://a0.muscache.com/pictures/2731383a-8558-47c4-a498-9f8358624199.jpg 2x"
                                       style="object-fit: cover;"
                                      />
-                                     <div class="_10xjrv2u" style="background-image: url('https://a0.muscache.com/pictures/2731383a-8558-47c4-a498-9f8358624199.jpg'); background-size: cover;"></div>
+                                     <div class="lite-image-fallback" style="background-image: url('https://a0.muscache.com/pictures/2731383a-8558-47c4-a498-9f8358624199.jpg'); background-size: cover;"></div>
                                     </div>
                                    </div>
                                   </div>
@@ -1210,7 +1210,7 @@
                                       srcset="https://a0.muscache.com/pictures/2dbe2185-9a25-4f7d-bb49-6f0ce02c4d65.jpg, https://a0.muscache.com/pictures/578ba2b4-9f7f-4228-82d5-9f25bc507010.jpg 2x"
                                       style="object-fit: cover; border-radius: 12px;"
                                      />
-                                     <div class="_10xjrv2u" style="background-image: url('https://a0.muscache.com/pictures/578ba2b4-9f7f-4228-82d5-9f25bc507010.jpg'); background-size: cover; border-radius: 12px;"></div>
+                                     <div class="lite-image-fallback" style="background-image: url('https://a0.muscache.com/pictures/578ba2b4-9f7f-4228-82d5-9f25bc507010.jpg'); background-size: cover; border-radius: 12px;"></div>
                                     </div>
                                    </div>
                                    <div class="_19hruxm">
@@ -1235,7 +1235,7 @@
                                       srcset="https://a0.muscache.com/pictures/a1da6439-3434-46c6-90d9-4e0c63647ef9.jpg, https://a0.muscache.com/pictures/35354360-8fed-43a5-b60b-46112f0edb2b.jpg 2x"
                                       style="object-fit: cover; border-radius: 12px;"
                                      />
-                                     <div class="_10xjrv2u" style="background-image: url('https://a0.muscache.com/pictures/35354360-8fed-43a5-b60b-46112f0edb2b.jpg'); background-size: cover; border-radius: 12px;"></div>
+                                     <div class="lite-image-fallback" style="background-image: url('https://a0.muscache.com/pictures/35354360-8fed-43a5-b60b-46112f0edb2b.jpg'); background-size: cover; border-radius: 12px;"></div>
                                     </div>
                                    </div>
                                    <div class="_19hruxm">
