products-container__header-text-desc

--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -3109,7 +3109,7 @@
                                                   elementtiming="LCP-target">Included with this home</h2>
                                               </section>
                                             </div>
-                                            <div class="s1bh1tge dir dir-ltr">Helpful essentials you can expect when
+                                            <div class="products-container__header-text-desc dir dir-ltr">Helpful essentials you can expect when
                                               booking this home.</div>
                                           </div>
                                           <div class="_bfbtmj"
@@ -3170,7 +3170,7 @@
                                                     elementtiming="LCP-target">Add on services</h2>
                                                 </section>
                                               </div>
-                                              <div class="s1bh1tge dir dir-ltr">After booking this home, a trip designer
+                                              <div class="products-container__header-text-desc dir dir-ltr">After booking this home, a trip designer
                                                 can arrange any of these add-on services.</div>
                                             </div>
                                             <div class="_bfbtmj"
@@ -12749,7 +12749,7 @@
                                                   elementtiming="LCP-target">Included with this home</h2>
                                               </section>
                                             </div>
-                                            <div class="s1bh1tge dir dir-ltr">Helpful essentials you can expect when
+                                            <div class="products-container__header-text-desc dir dir-ltr">Helpful essentials you can expect when
                                               booking this home.</div>
                                           </div>
                                           <div class="_bfbtmj"
@@ -12811,7 +12811,7 @@
                                                   elementtiming="LCP-target">Add on services</h2>
                                               </section>
                                             </div>
-                                            <div class="s1bh1tge dir dir-ltr">After booking this home, a trip designer
+                                            <div class="products-container__header-text-desc dir dir-ltr">After booking this home, a trip designer
                                               can arrange any of these add-on services.</div>
                                           </div>
                                           <div class="_bfbtmj"
