--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -16544,7 +16544,7 @@
                                             Select check-in date</h2>
                                         </section>
                                       </div>
-                                      <div class="s1bh1tge dir dir-ltr">
+                                      <div class="products-container__header-text-desc dir dir-ltr">
                                         <div class="_uxnsba" data-testid="availability-calendar-date-range">Minimum
                                           stay: 2 nights</div>
                                       </div>
