lite-image__default

--- a/become-a-host/description.html
+++ b/become-a-host/description.html
@@ -1025,7 +1025,7 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
                 <div class="lite-image" style="--dls-liteimage-padding-top: 55.9633%;">
                  <div class="absolute-center">
                   <img
-                   class="_91slf2a"
+                   class="lite-image__default"
                    aria-hidden="true"
                    alt=""
                    decoding="async"
