--- a/become-a-host/preview.html
+++ b/become-a-host/preview.html
@@ -985,7 +985,7 @@
                 <div class="lite-image" style="--dls-liteimage-padding-top: 55.9633%;">
                  <div class="absolute-center">
                   <img
-                   class="_91slf2a"
+                   class="lite-image__default"
                    aria-hidden="true"
                    alt=""
                    decoding="async"
