--- a/landing-pages/social-impact-host.html
+++ b/landing-pages/social-impact-host.html
@@ -166,7 +166,7 @@
                                           >
                                             <div class="absolute-center">
                                               <img
-                                                class="_91slf2a"
+                                                class="lite-image__default"
                                                 aria-hidden="true"
                                                 alt=""
                                                 decoding="async"
@@ -1217,7 +1217,7 @@ Harlem, New York City"
                                           >
                                             <div class="absolute-center">
                                               <img
-                                                class="_91slf2a"
+                                                class="lite-image__default"
                                                 aria-hidden="true"
                                                 alt=""
                                                 decoding="async"
