--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -25163,7 +25163,7 @@
                                                   --dls-liteimage-padding-top: 66.6667%;
                                                 ">
                                               <div class="absolute-center">
-                                                <img class="_91slf2a" aria-hidden="true"
+                                                <img class="lite-image__default" aria-hidden="true"
                                                   alt="9 double bedroom luxury villa with infinity pool"
                                                   elementtiming="LCP-target"
                                                   src="https://a0.muscache.com/pictures/c1dd351c-3898-415a-bcad-bc85d642dc98.jpg"
