--- a/submission/photo-upload.html
+++ b/submission/photo-upload.html
@@ -1054,7 +1054,7 @@
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage  with a variety of details and angles" style="--dls-liteimage-padding-top: 133.333%;">
                                     <div class="absolute-center">
                                      <img
-                                      class="_91slf2a"
+                                      class="lite-image__default"
                                       aria-hidden="true"
                                       alt="Photo collage  with a variety of details and angles"
                                       elementtiming="LCP-target"
@@ -1069,7 +1069,7 @@
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage  with a variety of details and angles" style="--dls-liteimage-padding-top: 133.333%;">
                                     <div class="absolute-center">
                                      <img
-                                      class="_91slf2a"
+                                      class="lite-image__default"
                                       aria-hidden="true"
                                       alt="Photo collage  with a variety of details and angles"
                                       elementtiming="LCP-target"
@@ -1084,7 +1084,7 @@
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage  with a variety of details and angles" style="--dls-liteimage-padding-top: 133.333%;">
                                     <div class="absolute-center">
                                      <img
-                                      class="_91slf2a"
+                                      class="lite-image__default"
                                       aria-hidden="true"
                                       alt="Photo collage  with a variety of details and angles"
                                       elementtiming="LCP-target"
@@ -1099,7 +1099,7 @@
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage  with a variety of details and angles" style="--dls-liteimage-padding-top: 133.333%;">
                                     <div class="absolute-center">
                                      <img
-                                      class="_91slf2a"
+                                      class="lite-image__default"
                                       aria-hidden="true"
                                       alt="Photo collage  with a variety of details and angles"
                                       elementtiming="LCP-target"
@@ -1126,7 +1126,7 @@
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage with  the same subjects and angles" style="--dls-liteimage-padding-top: 133.333%;">
                                     <div class="absolute-center">
                                      <img
-                                      class="_91slf2a"
+                                      class="lite-image__default"
                                       aria-hidden="true"
                                       alt="Photo collage with  the same subjects and angles"
                                       elementtiming="LCP-target"
@@ -1141,7 +1141,7 @@
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage with  the same subjects and angles" style="--dls-liteimage-padding-top: 133.333%;">
                                     <div class="absolute-center">
                                      <img
-                                      class="_91slf2a"
+                                      class="lite-image__default"
                                       aria-hidden="true"
                                       alt="Photo collage with  the same subjects and angles"
                                       elementtiming="LCP-target"
@@ -1156,7 +1156,7 @@
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage with  the same subjects and angles" style="--dls-liteimage-padding-top: 133.333%;">
                                     <div class="absolute-center">
                                      <img
-                                      class="_91slf2a"
+                                      class="lite-image__default"
                                       aria-hidden="true"
                                       alt="Photo collage with  the same subjects and angles"
                                       elementtiming="LCP-target"
@@ -1171,7 +1171,7 @@
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage with  the same subjects and angles" style="--dls-liteimage-padding-top: 133.333%;">
                                     <div class="absolute-center">
                                      <img
-                                      class="_91slf2a"
+                                      class="lite-image__default"
                                       aria-hidden="true"
                                       alt="Photo collage with  the same subjects and angles"
                                       elementtiming="LCP-target"
@@ -1201,7 +1201,7 @@
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo of a candid moment" style="border-radius: 12px; --dls-liteimage-padding-top: 133.333%;">
                                     <div class="absolute-center">
                                      <img
-                                      class="_91slf2a"
+                                      class="lite-image__default"
                                       aria-hidden="true"
                                       alt="Photo of a candid moment"
                                       elementtiming="LCP-target"
@@ -1226,7 +1226,7 @@
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo of a pose that is not candid" style="border-radius: 12px; --dls-liteimage-padding-top: 133.333%;">
                                     <div class="absolute-center">
                                      <img
-                                      class="_91slf2a"
+                                      class="lite-image__default"
                                       aria-hidden="true"
                                       alt="Photo of a pose that is not candid"
                                       elementtiming="LCP-target"
