--- a/become-a-host/legal.html
+++ b/become-a-host/legal.html
@@ -971,7 +971,7 @@
                 <div class="lite-image" style="--dls-liteimage-padding-top: 55.9633%;">
                  <div class="absolute-center">
                   <img
-                   class="_91slf2a"
+                   class="lite-image__default"
                    aria-hidden="true"
                    alt=""
                    decoding="async"
@@ -1074,7 +1074,7 @@
                 <div class="lite-image" style="--dls-liteimage-padding-top: 55.9633%;">
                  <div class="absolute-center">
                   <img
-                   class="_91slf2a"
+                   class="lite-image__default"
                    aria-hidden="true"
                    alt=""
                    decoding="async"
