--- a/listings-product/places.html
+++ b/listings-product/places.html
@@ -435,7 +435,7 @@
                                             <div class="lite-image" style="--dls-liteimage-padding-top: 56%">
                                               <div class="absolute-center">
                                                 <img
-                                                  class="_91slf2a"
+                                                  class="lite-image__default"
                                                   aria-hidden="true"
                                                   alt=""
                                                   elementtiming="LCP-target"
@@ -468,7 +468,7 @@
                                             <div class="lite-image" style="--dls-liteimage-padding-top: 56%">
                                               <div class="absolute-center">
                                                 <img
-                                                  class="_91slf2a"
+                                                  class="lite-image__default"
                                                   aria-hidden="true"
                                                   alt=""
                                                   elementtiming="LCP-target"
@@ -500,7 +500,7 @@
                                             <div class="lite-image" style="--dls-liteimage-padding-top: 56%">
                                               <div class="absolute-center">
                                                 <img
-                                                  class="_91slf2a"
+                                                  class="lite-image__default"
                                                   aria-hidden="true"
                                                   alt=""
                                                   elementtiming="LCP-target"
@@ -532,7 +532,7 @@
                                             <div class="lite-image" style="--dls-liteimage-padding-top: 56%">
                                               <div class="absolute-center">
                                                 <img
-                                                  class="_91slf2a"
+                                                  class="lite-image__default"
                                                   aria-hidden="true"
                                                   alt=""
                                                   elementtiming="LCP-target"
