products-container__header-text-pb

--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -16537,7 +16537,7 @@
                               <div class="_le6wlg">
                                 <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
                                   <div>
-                                    <div class="sewcpu6 dir dir-ltr" style="--spacingBottom:0;">
+                                    <div class="products-container__header-text-pb dir dir-ltr" style="--spacingBottom:0;">
                                       <div class="t5p7tdn dir dir-ltr">
                                         <section>
                                           <h2 tabindex="-1" class="hnwb2pb dir dir-ltr" elementtiming="LCP-target">
