--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -3183,7 +3183,7 @@
           style="padding-top: 32px; padding-bottom: 32px;">
           <section>
             <div class="h1e0znt6 dir dir-ltr">
-              <div class="sewcpu6 dir dir-ltr" style="--spacingBottom:0;">
+              <div class="products-container__header-text-pb dir dir-ltr" style="--spacingBottom:0;">
                 <div class="t5p7tdn dir dir-ltr">
                   <section>
                     <h2 tabindex="-1" class="hnwb2pb dir dir-ltr" elementtiming="LCP-target">More online experiences
@@ -8871,7 +8871,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
         <div data-plugin-in-point-id="POLICIES_EXPERIENCES" data-section-id="POLICIES_EXPERIENCES"
           style="padding-top: 48px; padding-bottom: 48px;">
           <section>
-            <div class="sewcpu6 dir dir-ltr" style="--spacingBottom:3;">
+            <div class="products-container__header-text-pb dir dir-ltr" style="--spacingBottom:3;">
               <div class="t5p7tdn dir dir-ltr">
                 <h2 tabindex="-1" class="hnwb2pb dir dir-ltr" elementtiming="LCP-target">Things to know</h2>
               </div>
@@ -8969,7 +8969,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
           style="padding-top: 48px; padding-bottom: 48px;">
           <section>
             <div class="h1e0znt6 dir dir-ltr">
-              <div class="sewcpu6 dir dir-ltr" style="--spacingBottom:0;">
+              <div class="products-container__header-text-pb dir dir-ltr" style="--spacingBottom:0;">
                 <div class="t5p7tdn dir dir-ltr">
                   <section>
                     <h2 tabindex="-1" class="hnwb2pb dir dir-ltr" elementtiming="LCP-target">More online experiences
