--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -11308,7 +11308,7 @@
                                                                     </div>
                                                                     <div class="_18x3iiu">
                                                                       <div>
-                                                                        <div class="sewcpu6 dir dir-ltr"
+                                                                        <div class="products-container__header-text-pb dir dir-ltr"
                                                                           style="--spacingBottom:0;">
                                                                           <div class="t5p7tdn dir dir-ltr">
                                                                             <section>
@@ -27924,7 +27924,7 @@
                                 <div class="_le6wlg">
                                   <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
                                     <div>
-                                      <div class="sewcpu6 dir dir-ltr" style="--spacingBottom:0;">
+                                      <div class="products-container__header-text-pb dir dir-ltr" style="--spacingBottom:0;">
                                         <div class="t5p7tdn dir dir-ltr">
                                           <section>
                                             <h2 tabindex="-1" class="hnwb2pb dir dir-ltr" elementtiming="LCP-target">
