site-content__body

--- a/landing-pages/merchandising.html
+++ b/landing-pages/merchandising.html
@@ -208,7 +208,7 @@
                         </div>
                       </nav>
                       <div tabindex="-1" class="_1i7ccu91">
-                        <div class="_1unac3l">
+                        <div class="site-content__body">
                           <div class="confirm-pay">
                             <div>
                               <div
@@ -10541,7 +10541,7 @@
                   --view-to-view-transition-element-visibility: hidden;
                 "
               >
-                <div class="_1unac3l">
+                <div class="site-content__body">
                   <div class="confirm-pay">
                     <div>
                       <div
