--- a/listings-product/contact-host-message.html
+++ b/listings-product/contact-host-message.html
@@ -21,7 +21,7 @@
                 "
               >
                 <div tabindex="-1" class="_1i7ccu91">
-                  <div class="_1unac3l">
+                  <div class="site-content__body">
                     <div class="confirm-pay">
                       <div class="_3hmsj">
                         <div
