--- a/payments/your-payments.html
+++ b/payments/your-payments.html
@@ -213,7 +213,7 @@
                         </div>
                       </nav>
                       <div tabindex="-1" class="_1i7ccu91">
-                        <div class="_1unac3l">
+                        <div class="site-content__body">
                           <div id="FMP-target">
                             <div class="block">
                               <main id="site-content">
@@ -706,7 +706,7 @@
                       </div>
                     </div>
                     <main id="site-content">
-                      <div class="_1unac3l">
+                      <div class="site-content__body">
                         <div id="FMP-target">
                           <div class="_88xxct">
                             <div class="flex-before-after dir dir-ltr">
